mobilerobotics_ws/log/build_2023-12-02_19-05-31/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/better_soccer.py", line 350
    def turn(self, angle_cw):
    ^
SyntaxError: invalid syntax

